<resources>
    <string name="app_name">Covertly</string>
    <string name="setting_account_name">Name</string>
    <string name="confirm_acceptance_dialog_title">Calling!</string>
    <string name="confirm_acceptance_dialog_message">Calling from</string>
    <string name="confirm_acceptance_dialog_ok">Accept</string>
    <string name="confirm_acceptance_dialog_ng">Reject</string>
    <string name="confirm_request_dialog_title">Confirm</string>
    <string name="confirm_request_dialog_message">Do you want to call</string>
    <string name="confirm_request_dialog_ok">Yes</string>
    <string name="confirm_request_dialog_ng">No</string>
    <string name="confirm_finish_communication">Do you finish this communication?</string>
    <string name="disconnected_message_dialog_message">Lost connection with opponent device!</string>
    <string name="initial_note">Please enter your name on this form.\n※You can change it later</string>
    <string name="initial_hint">your name</string>
    <string name="initial_ok">OK</string>
    <string name="setting_save">Save</string>
    <string name="setting_saved_toast_massage">The name has changed</string>
    <string name="item_user_icon_name">user icon</string>
    <string name="item_history_time">0000/00/00 00:00</string>
    <string name="toolbar_title"></string>
    <string name="toolbar_back_button">back button</string>
    <string name="toolbar_title_active_user_list">Active Users</string>
    <string name="toolbar_title_communication">communicating</string>
    <string name="toolbar_title_history_user_list">History</string>
    <string name="toolbar_title_history_communication">History</string>
    <string name="toolbar_title_setting">Setting</string>
    <string name="toolbar_title_licenses">Licenses</string>
    <string name="bottom_chat_title">Chat</string>
    <string name="bottom_history_title">History</string>
    <string name="bottom_setting_title">Setting</string>
    <string name="font_system_default">font_system_default</string>
    <string name="notosans_regular">notosans_regular.ttf</string>
    <string name="notosans_italic">notosans_italic.ttf</string>
    <string name="notosans_bolditalic">notosans_bolditalic.ttf</string>
    <string name="notosansjp_medium">notosansjp_medium.otf</string>
    <string name="font_asset_folder">font/</string>
</resources>
