<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.komeyama.offline.chat.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/initial_note_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_note"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/initial_name_editor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="parent"/>

        <EditText
            android:id="@+id/initial_name_editor"
            android:hint="@string/initial_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:text="@={viewModel.nameText}"
            app:layout_constraintTop_toBottomOf="@id/initial_note_message"
            app:layout_constraintStart_toEndOf="parent" />

        <Button
            android:id="@+id/initial_name_decision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_ok"
            android:onClick="@{() -> viewModel.setUserName()}"
            app:layout_constraintTop_toBottomOf="@id/initial_name_editor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>