<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.komeyama.offline.chat.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="15dp" />

        <TextView
            android:id="@+id/setting_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/setting_account_name"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/left_well"
            app:layout_constraintBottom_toTopOf="@id/setting_name_editor"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/setting_name_editor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:inputType="textPersonName"
            android:hint="@string/initial_hint"
            android:importantForAutofill="no"
            android:text="@={viewModel.editNameText}"
            app:layout_constraintStart_toEndOf="@+id/left_well"
            app:layout_constraintEnd_toStartOf="@+id/right_well"
            app:layout_constraintTop_toBottomOf="@id/setting_name_title"
            app:layout_constraintBottom_toTopOf="@id/setting_save_button"/>

        <Button
            android:id="@+id/setting_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_save"
            android:textAllCaps="false"
            android:enabled="@{viewModel.editNameText.empty ? false : true}"
            android:onClick="@{() -> viewModel.updateUserName()}"
            app:layout_constraintStart_toEndOf="@+id/left_well"
            app:layout_constraintEnd_toStartOf="@+id/right_well"
            app:layout_constraintTop_toBottomOf="@+id/setting_name_editor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>